--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ python-dotenv==1.0.0
 openai-whisper==20231117
 PyPDF2==3.0.1
 pdfplumber==0.11.4
+langdetect==1.0.9
 
 # System dependencies (not installable via pip):
 # - ffmpeg: required by whisper for audio processing
