--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ PyPDF2==3.0.1
 pdfplumber==0.11.4
 langdetect==1.0.9
 PyGithub==2.1.1
+claude-agent-sdk>=0.1.0
 
 # System dependencies (not installable via pip):
 # - ffmpeg: required by whisper for audio processing
