--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ pdfplumber==0.11.4
 langdetect==1.0.9
 PyGithub==2.1.1
 claude-agent-sdk>=0.1.0
+youtube-transcript-api==0.6.2
+yt-dlp==2024.8.6
 
 # System dependencies (not installable via pip):
 # - ffmpeg: required by whisper for audio processing
